# python-xeddsa

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  REQUIREMENTS  build_scalarmult_cffi_module.py  build_sign_cffi_module.py  pylintrc  pylintrc.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-and-publish.yml  test-on-push.yml
.travis/: before_install.sh  install.sh  script.sh
docs/: Makefile  conf.py  getting_started.rst  index.rst  installation.rst  make.bat  xeddsa.implementations.rst  xeddsa.implementations.xeddsa25519.rst  xeddsa.rst  xeddsa.xeddsa.rst
docs/xeddsa/: bindings.rst  package.rst  xeddsa.rst  xeddsa25519.rst
docs/xeddsa/implementations/: package.rst  xeddsa25519.rst
examples/: Test.py  conversion.py  signing.py
libxeddsa/: build.py  libxeddsa-windows-amd64.lib  libxeddsa.js  libxeddsa.wasm  xeddsa.h
ref10/: CMakeLists.txt  Makefile  README.md  build.py
ref10/crypto_core/: Makefile  crypto_core_salsa20.h  module.h
ref10/crypto_hash/: Makefile  crypto_hash_sha512.h  module.h
ref10/crypto_hashblocks/: Makefile  crypto_hashblocks_sha512.h  module.h
ref10/crypto_rng/: Makefile  crypto_rng.h  crypto_rng_salsa20.h  module.h
ref10/crypto_scalarmult/: Makefile  cmake_install.cmake  crypto_scalarmult_curve25519.h  fe.h  module.h
ref10/crypto_sign/: Makefile  crypto_sign_ed25519.h  fe.h  ge.h  module.h  sc.h
ref10/crypto_stream/: Makefile  crypto_stream.h  crypto_stream_salsa20.h  module.h
ref10/crypto_verify/: Makefile  crypto_verify_32.h  module.h
ref10/fastrandombytes/: Makefile  module.h  randombytes.h
ref10/include/: cross_platform.h
ref10/kernelrandombytes/: Makefile  getrandom3.c  kernelrandombytes.h  module.h  rtlgenrandom.c  secrandomcopybytes.c
stubs/: _crypto_sign.pyi  _libxeddsa.pyi  libnacl.pyi
tests/: test_brython.html  test_conversion.py  test_conversion_uniqueness.py  test_key_management.py  test_signing.py  test_special.py  test_types.py
xeddsa/: __init__.py  bindings.py  libxeddsa_emscripten.py  project.py  version.py  xeddsa.py  xeddsa25519.py
xeddsa/implementations/: __init__.py  ref10.py  xeddsa25519.py
